[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/HealthBar/health_bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Units/Hostile/Farmer/Farmer.gd" type="Script" id=2]
[ext_resource path="res://Units/Hostile/Farmer/Farmer-Sheet.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.10226
height = 4.59369

[sub_resource type="CircleShape2D" id=2]
radius = 60.0

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 144, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
} ]

[sub_resource type="Animation" id=14]
resource_name = "Die"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.3 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[node name="Farmer" type="KinematicBody2D" groups=[
"Hostile",
]]
input_pickable = true
collision_layer = 2
script = ExtResource( 2 )
MaxHealth = 60.0

[node name="BodyCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FearRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FearRange"]
visible = false
position = Vector2( -0.749451, 0 )
shape = SubResource( 2 )

[node name="HealthBar" parent="." instance=ExtResource( 1 )]
modulate = Color( 1, 1, 1, 0.694118 )
margin_top = -15.9434
margin_bottom = 0.0566006

[node name="AggroTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "Run"
frame = 2
playing = true

[node name="PathTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 14 )
[connection signal="input_event" from="." to="." method="_on_Farmer_input_event"]
[connection signal="body_entered" from="FearRange" to="." method="_on_FearRange_body_entered"]
[connection signal="body_exited" from="FearRange" to="." method="_on_FearRange_body_exited"]
[connection signal="timeout" from="AggroTimer" to="." method="_on_AggroTimer_timeout"]
[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
